# sonos-mux

./: .gitignore  .orb.py  Cargo.toml  LICENSE  PROJECT.md  README.md  SPRINT-01.md  SPRINT-02.md  SPRINT-03.md  SPRINT-04.md  SPRINT-05.md  SPRINT-06.md  devenv.nix
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: admin.rs  main.rs  scanner.rs
docs/: adding-new-room.md
examples/: config.toml
mux-core/: Cargo.toml
mux-core/benches/: mixer_bench.rs
mux-core/src/: config.rs  encoder.rs  file_input.rs  http_input.rs  lib.rs  mixer.rs  routing.rs  silence_input.rs  stream.rs
mux-core/src/input/: alsa.rs  file.rs  http.rs  mod.rs  silence.rs
mux-core/src/output/: mod.rs  sonos.rs
mux-core/src/tests/: mixer_tests.rs  mod.rs  sonos_tests.rs
mux-core/tests/: mixer_tests.rs
muxd/: Cargo.toml
muxd/src/: admin.rs  main.rs
muxd/tests/: hot_reload_test.rs  integration_test.rs
scripts/: run_dev.sh
tests/: integration_test.rs
