[package]
name = "cli"
version = "0.0.1"
edition = "2021"

[dependencies]
mux-core = { path = "../mux-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
