[package]
name = "mux-core"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1", features=["derive"] }
thiserror = "1"
toml = "0.8"
crossbeam-channel = "0.5"
log = "0.4"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }