[package]
name = "mux-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.37", features = ["full"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
crossbeam-channel = "0.5"
log = "0.4"
# Note: We're mocking sonor functionality for now

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1.37", features = ["full"] }
tempfile = "3.9"

[[bench]]
name = "mixer_bench"
harness = false