[package]
name = "muxd"
version = "0.0.1"
edition = "2021"

[dependencies]
mux-core = { path = "../mux-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
crossbeam-channel = "0.5"
ctrlc = "3.4"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3"